[tool.poetry]
name = "wemos-bmp280-cloud-functions-e2e-test"
version = "0.1.0"
description = ""
authors = ["Ben Nagy <nagy.benb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
requests = "^2.28.1"
pytest = "^7.1.2"
google-cloud-storage = "^2.4.0"
google-cloud-firestore = "^2.5.3"
google-cloud-pubsub = "^2.13.0"
google-auth = "^2.9.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
