[tool.poetry]
name = "weather-station-viz"
version = "0.1.0"
description = ""
authors = ["Ben Nagy <nagy.benb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
fastapi = "^0.70.0"
Jinja2 = "^3.0.2"
pandas = "^1.3.3"
plotly = "^5.3.1"
firebase-admin = "^5.2.0"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.3.0"
isort = "^5.9.3"
mypy = "^0.910"
types-requests = "^2.25.11"
firebase-admin = "^5.0.3"
rope = "^0.21.0"
jupyter = "^1.0.0"
ipykernel = "^6.9.1"
nbformat = "^5.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
